fixing contact button alignment

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -158,6 +158,7 @@
 
         @include breakpoint("large") {
             .navPages & {
+                bottom: 0;
                 margin-left: auto;
                 margin-right: 0;
                 position: absolute;
